
Version 0.9 (legolas558 - official)
-------------

* rewritten core javascript functions
* DOM is cleaned up before saving
* import feature working ok
* history gets saved
* embedded pictures
* new data storage format (faster & allow diffs)
* much better syntax parsing
* backlinks
* erase wiki

Version 0.04G (legolas558's unofficial)
-------------

* double click to edit
* escape key to cancel editing
* backspace key to go backward
* textarea is focused when editing
* correct lists parsing
* hid special pages in "All pages"
* corrected rulers parsing in IE
* fixed bug with #anchors when saving to file
* reference link for "Pages not yet created"

Version 0.04
------------
 * unicode support added
 * tables support added
 * bugfixes: multiple rulers in one document now work, dead pages
 * search for orphaned pages (pages that exist but have no link to them anymore)
 * fixed bug when importing documents from current version
 * line saying when file was last modified added in the advanced page
 * option to block editing added (to use WoaS as a webpage)
 * added possibility to go directly to a page inside the wiki
 * Opera support added (read-only)
 * _Underline_ added

Version 0.03
------------
 * IE support added (still in alpha)
 * bugs related to linebreaks in Linux corrected
 * importing from a earlier version added
 * a page now can be deleted
 * now a page title can have any character (like 15", for example)
 * lots of small corrections 