@@ -137,6 +137,7 @@ There have been a few changes in the wiki syntax, they will be automatically app
 * line joining through a slash '\\' at the end of the line\n\
 * automatic TOC generation in place of [<!-- -->[Special::TOC]]\n\
 * namespace-specific menus creating [<!-- -->[Namespace::Menu]] pages (the main menu is [[::Menu]])\n\
+* alphanumerical lists using '@'\n\
 \n\
 !Syntax examples \n\
 Follows a brief example of all the capabilities of Wiki on a Stick syntax.\n\
@@ -197,6 +198,13 @@ Numbered list:\n\
 ## Subitem iii\n\
 ### Subsubitem iv\n\
 # Item C\n\
+\n\
+Alphanumerically ordered list:\n\
+@ Paragraph A\n\
+@ Paragraph B\n\
+@@ Subparagraph 1\n\
+@@ Subparagraph 2\n\
+\n\
 \n\
 !!Tables\n\
 \n\
